--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -78,7 +78,6 @@ body {
 .menu-wrapper {
     display: flex;
     width: 471px;
-    justify-content: space-between;
     margin-left: 310px
 }
 
@@ -92,25 +91,25 @@ body {
     flex-wrap: wrap;
     margin-top: 30px;
     align-items: center;
-    justify-content: space-between;
 }
 
 .catalog-button {
-    width: 50px;
-    margin-left: 7px;
+    max-width: 50px;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .nav-main-wrapper {
     display: flex;
     flex-wrap: wrap;
     margin-top: 45px;
-    justify-content: space-between;
 }
 
 .best-product-container {
     display: flex;
     align-items: center;
-    margin-top: -45px;
+    margin-top: -50px;
     justify-content: space-between;
 }
 
@@ -119,7 +118,6 @@ body {
     align-items: center;
     margin-right: 0;
     margin-top: -100px;
-    padding-bottom: 20px;
     max-width: 560px;
     width: 100%;
 }
@@ -148,6 +146,7 @@ body {
 
 .products-wrapper ul {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 70px;
 }
@@ -162,7 +161,7 @@ body {
 }
 
 .services-item {
-    padding-bottom: 45px;
+    margin-bottom: 45px;
 }
 
 .services {
@@ -178,6 +177,7 @@ body {
 
 .services-list-wrapper {
     display: flex;
+    flex-wrap: wrap;
     width: 280px;
     align-items: center;
     margin-top: -27px;
@@ -233,7 +233,7 @@ body {
 }
 
 .about-delivery-description-item {
-    padding-bottom: 19px;
+    margin-bottom: 19px;
     padding-left: 26px;
 }
 
@@ -256,7 +256,7 @@ body {
 .contacts-wrapper {
     max-width: 532px;
     width: 100%;
-    padding-bottom: 10px;
+
 }
 
 .contacts-description {
@@ -282,13 +282,15 @@ body {
     color: #444444;
 }
 
-.site-logo {
-    margin-left: 50px;
-    margin-top: 62px;
+.footer-wrapper {
+    padding-top: 62px;
+    padding-bottom: 62px;
 }
+
 
 .footer-menu-wrapper {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     margin-top: 35px;
@@ -311,26 +313,38 @@ body {
 
 .footer-social-wrapper {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
-    margin-top: 64px;
+    margin-top: 62px;
+    justify-content: flex-start;
+    max-width: 1160px;
+    width: 100%;
+    
 }
 
 .social-rectangle {
     visibility: hidden;
+    max-width: 80px;
+    width: 100%;
 }
 
 .footer-social-list {
     display: flex;
+    flex-wrap: wrap;
     max-width: 150px;
-    width: 100%;
     margin: 0;
     padding: 0;
+    margin-left: 485px;
 }
 
 .footer-social-item {
     padding-left: 15px;
     padding-right: 15px;
+}
+.academy-logo-wrapper {
+    margin: 0;
+    margin-left: 340px;
+    width: 115px;
 }
 
 .visually-hidden {
@@ -390,9 +404,9 @@ body {
     width: 100%;
 }
 
-
 .nav-menu {
     display: flex;
+    flex-wrap: wrap;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     line-height: 21px;
@@ -400,12 +414,18 @@ body {
     text-transform: uppercase;
     list-style: none;
     margin: 0;
-    margin-left: 276px;
+    margin-left: 290px;
     padding: 0;
     color: #000000;
     text-decoration: none;
-    width: 471px;
-    justify-content: space-between;
+    max-width: 471px;
+    width: auto;
+}
+.nav-menu li {
+    padding-left: 43px;
+}
+.nav-menu li:nth-child(1) {
+    padding-left: 0;
 }
 
 .nav-catalog-link {
@@ -423,6 +443,7 @@ body {
 
 .slider-pagination {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -485,13 +506,12 @@ body {
     margin-top: 70px;
     padding-top: 40px;
     padding-bottom: 40px;
-
 }
 
 .newsletter {
     background-color: #ebebeb;
-    min-height: 421px;
     margin-top: 70px;
+    padding: 64px 133px 56px 147px;
 }
 
 .newsletter-title {
@@ -501,8 +521,11 @@ body {
 
 .newsletter-description {
     margin: 0;
+    margin-left: 252px;
     margin-top: 74px;
     color: #444444;
+    max-width: 560px;
+    width: 100%;
 }
 
 .newsletter-description-wrapper {
@@ -544,17 +567,18 @@ body {
     letter-spacing: 0.2em;
     text-transform: uppercase;
     padding: 18px 39px;
+    width: 253px;
 }
 
 .page-footer {
     color: #ffffff;
     background-color: #444444;
-    height: 321px;
+    min-height: 321px;
+    height: auto;
 }
 
 .footer-services li {
     color: #ffffff;
-
 }
 
 .contacts-phone {
@@ -575,6 +599,8 @@ body {
 
 .contacts-address-text {
     margin: 0;
+    max-width: 234px;
+    width: auto;
 }
 
 .catalog-products {
@@ -585,13 +611,15 @@ body {
 .catalog-wrapper {
     display: flex;
     justify-content: flex-start;
-
 }
 
 .sort-wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     margin-left: 40px;
+    min-height: 70px;
 }
 
 .product-list {
@@ -608,6 +636,7 @@ body {
 .catalog-filter-item:nth-child(1) {
     margin-top: 21px;
 }
+
 .catalog-filter-item:last-child {
     margin-bottom: 0;
 }
@@ -615,7 +644,6 @@ body {
 .control-input-price {
     margin-top: 30px;
 }
-
 
 .product-card-title {
     font-family: 'Rubik';
@@ -643,7 +671,6 @@ body {
     text-transform: uppercase;
 }
 
-
 .contacts-footer {
     font-family: 'Rubik';
     font-size: 16px;
@@ -664,8 +691,6 @@ body {
     letter-spacing: 0.2em;
     text-transform: uppercase;
     margin: 0;
-    margin-top: 25px;
-    margin-bottom: 25px;
 }
 
 .main-filter-title {
@@ -677,7 +702,6 @@ body {
     text-transform: uppercase;
     margin: 0;
     margin-left: 2px;
-    margin-top: 25px;
 }
 
 .pagination-show-more {
@@ -708,25 +732,34 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    max-width: 320px;
+    width: auto;
+    margin-left: 58px;
+    padding-top: 25px;
+    padding-bottom: 650px;
 }
 
 .filter-group-price {
     padding: 0;
+    margin: 0;
     margin-top: 60px;
     border: none;
 }
 
 .filter-group-color {
     padding: 0;
+    margin: 0;
     margin-top: 39px;
     border: none;
 }
 
 .filter-group-bt {
     padding: 0;
+    margin: 0;
     margin-top: 35px;
     border: none;
 }
+
 .catalog-filter-list {
     margin: 0;
     padding: 0;
@@ -752,7 +785,7 @@ body {
     text-align: right;
 }
 
-h2 {
+h2.title {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 800;
@@ -762,6 +795,7 @@ h2 {
 
 ul.spec-list {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -795,7 +829,6 @@ ul.spec-list {
     margin-top: 12px;
 }
 
-
 li.spec-item-range {
     display: flex;
     flex-direction: column;
@@ -827,7 +860,7 @@ li.spec-item-radius {
     text-align: center;
     color: #444444;
     opacity: 0.3;
-    margin: auto;
+    margin: 0 16px;
 }
 
 .contacts-phone {
@@ -957,7 +990,7 @@ li.spec-item-radius {
     padding-bottom: 0;
 }
 
-.pagination-text {
+.pagination-text-prev {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 800;
@@ -965,7 +998,19 @@ li.spec-item-radius {
     line-height: 21px;
     letter-spacing: 0.2em;
     text-transform: uppercase;
-    margin: auto;
+    margin-left: 25px;
+    margin-right: 170px;
+}
+
+.pagination-text-next {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    margin-left: 170px;
 }
 
 .products-catalog-wrapper {
@@ -974,28 +1019,29 @@ li.spec-item-radius {
     padding-left: 40px;
     padding-right: 40px;
     max-width: 840px;
-    width: 100%;
+    width: auto;
     margin: 0;
     padding-bottom: 78px;
-
 }
 
 .products-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    row-gap: 44px;
-    column-gap: 40px;
+    gap: 44px 40px;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
 .pagination-cat-wrapper ul {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding: 0;
+    min-height: 71px;
+    height: auto;
     margin-top: 44px;
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     background-color: #ebebeb;
 }
 
@@ -1054,12 +1100,11 @@ li.spec-item-radius {
     text-decoration: none;
 }
 
-
-
 .inner-header {
-    margin-top: 35px;
     margin-left: 200px;
-
+    margin: 0 auto;
+    margin-top: 35px;
+    padding-left: 110px;
 }
 
 .select-control {
@@ -1071,4 +1116,3 @@ li.spec-item-radius {
     height: 60px;
     width: 20px;
 }
-
